# DevOpsBot_AI

./: CMakeLists.txt  README.txt  requirements.txt
src/: CommandExecutor.cpp  CommandExecutor.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  OllamaClient.cpp  OllamaClient.h  main.cpp
tests/: CMakeLists.txt  test_command_executor.cpp
